--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <style>
+        body {font-family:sans-serif;}
+    </style>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <h3><a href = "../odin-recipes/recipes/lasagna.html">Lasagna Recipe</a></h3>
 </body>
 </html>
