--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -17,8 +17,11 @@
     class="center"
     alt="Lasagna Image">
     </p>
-    <h2>Description</h2>
-    <h4>Ingredients</h4>
+    <h3>Description</h3>
+    <p>
+        "An easy lasagna recipe that saves me lots of time. This recipe is simple and satisfies everyone in the family. Try it tonight!" -Allrecipes Member
+    </p>
+    <h3>Ingredients</h3>
     <ul>
         <li>1 pound lean ground beef</li>
         <li>1 (32 ounce) jar spaghetti sauce</li>
@@ -32,7 +35,7 @@
         <li>9 lasagna noodles</li>
         <li>1/2 cup water</li>
     </ul>
-    <h4>Directions</h4>
+    <h3>Directions</h3>
     <ol>
         <li>Preheat the oven to 350ºF (175ºC).</li>
         <li>Warm a large skillet over medium heat. Add ground beef and cook until browned, 8 to 10 minutes. Drain the grease. Stir in spaghetti sauce and simmer for 5 minutes.</li>
